[wayland] long menus flicker after bug 1761929
Categories
(Core :: Widget: Gtk, defect, P3)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr91 | --- | unaffected |
| firefox99 | --- | unaffected |
| firefox100 | --- | unaffected |
| firefox101 | --- | verified |
People
(Reporter: lilydjwg, Assigned: emilio)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: regression)
Attachments
(3 files)
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:101.0) Gecko/20100101 Firefox/101.0
Steps to reproduce:
- get a long menu, either a folder with a lot of bookmarks, or the one described in bug 1761595
- move mouse cursor over it. if it doesn't flicker or disappear, move away and move over it again.
Actual results:
The menu either keeps flickering (bookmark folder) or disappears on hovering.
Expected results:
The menu should stay still.
12:16.32 INFO: Last good revision: c554d1b188f4f4441afbee2e0e545a96034e805d
12:16.32 INFO: First bad revision: 4d56ad9b7e38714a3949a5c6dbe30119812193f8
12:16.32 INFO: Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=c554d1b188f4f4441afbee2e0e545a96034e805d&tochange=4d56ad9b7e38714a3949a5c6dbe30119812193f8
Comment 1•3 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::Widget: Gtk' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.
Comment 2•3 years ago
|
||
Which compositor is that?
Can you run with MOZ_LOG="WidgetPopup:5" and attach the log here?
Thanks.
Updated•3 years ago
|
Comment 3•3 years ago
|
||
Does it affects all popups or do you see that with bookmarks only?
It's wlroots. Another user reports that it's reproducible with mutter.
| Assignee | ||
Updated•3 years ago
|
Comment 6•3 years ago
|
||
Set release status flags based on info from the regressing bug 1761929
Updated•3 years ago
|
| Assignee | ||
Updated•3 years ago
|
| Assignee | ||
Comment 7•3 years ago
|
||
It is the right place to do it, otherwise we don't have the guarantee of
it invalidating ancestor sizes or anything.
It's also what we invalidate in WaylandPopupPropagateChangesToLayout().
We otherwise do not have the guarantee of SetPopupPosition running
before or after layout, if sizes do not change. That caused the popup
size to remain big, which caused a resize loop.
Comment 9•3 years ago
|
||
| bugherder | ||
Updated•3 years ago
|
Comment 10•3 years ago
|
||
I was able to reproduce the issue on Ubuntu 20.4 Wayland using build 101.0a1(20220420215300).
Verified as fixed on Ubuntu 20.4 Wayland using Beta 101.0b8 (20220517185920).
Updated•3 years ago
|
Comment 11•3 years ago
|
||
same issue firefox esr 102 .deb install on wayland, gnome v3.38, debian based pureos 10,, mobile phone, phosh shell 0.21.1, 720x1440, 200% scale mobile phone.
flickrs opening any menue. Flickers fast and makes menues unusable short/ or long menues, cant access settings, or add-on options, or security tracking protection menue option.
Description
•